add acmicpc file

--- a/acmicpc/11048_이동하기.md
+++ b/acmicpc/11048_이동하기.md
@@ -1,6 +1,13 @@
+# 11048_이동하기
+
+print : 괄호 안에 있는 내용을 그대로 출력합니다. (개행문자(=\n)는 포함되지 않습니다.)   
+printf : C, Cpp에서 사용되는 printf와 동일합니다. %d, %s 등을 쓰기위해 사용합니다. (개행문자(=\n)는 포함되지 않습니다.)  
+println : 괄호 안에 있는 내용을 그대로 출력한 후 개행문자를 마지막에 출력해줍니다.   
+
+```java
 import java.util.Scanner;
 
-public class Sample {
+public class Main {
     public static void main(String[] args){
         Scanner scan = new Scanner(System.in);
         String[] str = scan.nextLine().split(" ");
@@ -36,8 +43,4 @@ public class Sample {
         System.out.println(arr[n - 1][m - 1]);
     }
 }
-/*
-print : 괄호안 내용을 단순히 출력. 개행문자(=줄바꿈문자=\n) 포함안됨.
-printf : C에서의 printf와 동일. %d, %s 등을 쓰기위해 사용. 개행문자 포함X
-println : 괄호안 내용을 출력한 후 마지막에 개행문자가 포함되어 있어 출력후 한 줄 띄워짐.
-*/
+```
