add acmicpc file

--- a/acmicpc/14889_스타트와링크.md
+++ b/acmicpc/14889_스타트와링크.md
@@ -1,3 +1,4 @@
+```java
 import java.util.Scanner;
 
 public class Main {
@@ -51,3 +52,4 @@ public class Main {
         Min = Math.min(Min, Math.abs(sum1 - sum2));
     }
 }
+```
