add acmicpc files

--- a/acmicpc/2579_계단오르기.md
+++ b/acmicpc/2579_계단오르기.md
@@ -1,4 +1,6 @@
-import java.io.IOException;
+```java
+import java.io.IOException; 
+// throws IOException 즉 익셉션(예외)가 발생하면 해당 클래스에서 벗어나게 된다는 것
 import java.util.Scanner;
 import java.util.Arrays;
 
@@ -35,3 +37,5 @@ public class Main {
         dp(N);
     }
 }
+
+```
