--- a/acmicpc/2156_포도주시식.md
+++ b/acmicpc/2156_포도주시식.md
@@ -1,3 +1,4 @@
+```java
 import java.io.IOException;
 import java.util.Scanner;
 
@@ -37,3 +38,4 @@ public class Main {
         dp(N);
     }
 }
+```
