add acmicpc file

--- a/acmicpc/2565_전깃줄.md
+++ b/acmicpc/2565_전깃줄.md
@@ -1,3 +1,4 @@
+```java
 import java.io.IOException;
 import java.util.Scanner;
 import java.util.Arrays;
@@ -55,3 +56,4 @@ public class Main {
         dp(Max, N);
     }
 }
+```
