--- a/acmicpc/11054_가장긴바이토닉부분수열.md
+++ b/acmicpc/11054_가장긴바이토닉부분수열.md
@@ -1,3 +1,4 @@
+```java
 import java.io.IOException;
 import java.util.Scanner;
 import java.util.Arrays;
@@ -6,8 +7,8 @@ public class Main {
     public static int[] arr;
     public static int[] arr1;
     public static int[] arr2;
-    public static int Max = Integer.MIN_VALUE, result = Integer.MIN_VALUE;
-    public static void dp(int N, int lenN){ 
+    public static int Max = Integer.MIN_VALUE;
+    public static void dp(int N){
         for(int i = 1; i <= N; i++){
             for(int j = 1; j <= i; j++){
                 if(arr[j] < arr[i] && arr1[j] >= arr1[i])
@@ -20,7 +21,7 @@ public class Main {
                     arr2[i] = arr2[j] + 1;
             }    
         }
-        
+        /*
         for(int i = 1; i <= N; i++){
             System.out.print(arr1[i] + " ");
         }
@@ -29,29 +30,25 @@ public class Main {
             System.out.print(arr2[i] + " ");
         }
         System.out.println("");
-        
+        */
         for(int i = 1; i <= N; i++){
-            result = Math.max(result, arr1[i]);
-            result = Math.max(result, arr2[i]);
+            Max = Math.max(Max, arr1[i] + arr2[i] - 1);
         }
-        System.out.println(lenN - result);
+        System.out.println(Max);
     }
     public static void main(String[] args) throws IOException{
         Scanner sc = new Scanner(System.in);
-        int N = sc.nextInt(), key, value;
-        arr = new int[501];
-        arr1 = new int[501];
-        arr2 = new int[501];
-        Arrays.fill(arr, 1);
+        int N = sc.nextInt();
+        arr = new int[N + 1];
+        arr1 = new int[N + 1];
+        arr2 = new int[N + 1];
         Arrays.fill(arr1, 1);
         Arrays.fill(arr2, 1);
         for(int i = 1; i <= N; i++){
-            key = sc.nextInt();
-            value = sc.nextInt();
-            arr[key] = value;
-            Max = Math.max(Max, Math.max(key, value));
+            arr[i] = sc.nextInt();
         }
         sc.close();
-        dp(Max, N);
+        dp(N);
     }
 }
+```
