--- a/acmicpc/10989_수정렬하기3.md
+++ b/acmicpc/10989_수정렬하기3.md
@@ -1,3 +1,4 @@
+```java
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.InputStreamReader;
@@ -21,3 +22,4 @@ public class Main {
         bw.close();
     }
 }
+```
