--- a/acmicpc/2981_검문.md
+++ b/acmicpc/2981_검문.md
@@ -1,3 +1,4 @@
+```java
 import java.util.Scanner;
 import java.util.Arrays;
 import java.util.List;
@@ -56,3 +57,4 @@ public class Main {
         PrintGcd(Gcd);
     }
 }
+```
