--- a/acmicpc/10828_스택.md
+++ b/acmicpc/10828_스택.md
@@ -1,3 +1,4 @@
+```java
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.io.BufferedReader;
@@ -40,3 +41,4 @@ public class Main {
         bw.close();
     }
 } 
+```
