--- a/acmicpc/10773_제로.md
+++ b/acmicpc/10773_제로.md
@@ -1,3 +1,4 @@
+```java
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.io.BufferedReader;
@@ -27,3 +28,4 @@ public class Main {
         bw.close();
     }
 } 
+```
