--- a/acmicpc/18258_큐2.md
+++ b/acmicpc/18258_큐2.md
@@ -1,3 +1,4 @@
+```java
 import java.io.OutputStreamWriter;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -85,3 +86,4 @@ public class Main {
         bw.close();
     }
 }
+```
