add acmicpc files

--- a/acmicpc/1021_덱.md
+++ b/acmicpc/1021_덱.md
@@ -1,3 +1,4 @@
+```java
 import java.io.OutputStreamWriter;
 import java.util.ArrayList;
 import java.util.LinkedList;
@@ -62,3 +63,4 @@ public class Main {
         bw.close();
     }
 }
+```
