add acmicpc file

--- a/acmicpc/5430_AC.md
+++ b/acmicpc/5430_AC.md
@@ -1,3 +1,14 @@
+원소 전부를 reverse하면 시간 초과가 일어납니다.
+
+* 주의 사항
+
+1. 빈 배열은 []로 출력해야 합니다.  
+2. 배열이 비어있는데 R은 에러가 발생하지 않습니다. D만 에러입니다.
+3. R 명령일때, 배열의 모든 원소를 뒤집으면 시간 초과가 일어나게 됩니다.  
+4. D 명령일때, 배열의 맨 앞 원소를 무작정 지우면 안 됩니다.  
+
+
+```java
 import java.io.OutputStreamWriter;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -74,3 +85,66 @@ public class Main {
         bw.close();
     }
 }
+```
+
+이렇게 만들면 안됩니다!
+
+```java
+import java.io.OutputStreamWriter;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedList;
+import java.util.StringTokenizer;
+import java.io.InputStreamReader;
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+
+public class Main {
+    private static ArrayList<Integer> queue;
+    private static StringBuilder sb;
+    public static String check(String order, int M, ArrayList<Integer> queue){
+        StringBuilder sb = new StringBuilder();
+        for(int i = 0; i < order.length(); i++){
+            if(order.charAt(i) == 'R'){
+                Collections.reverse(queue);
+            } else if(order.charAt(i) == 'D'){
+                if(queue.isEmpty()){
+                    break;
+                } else {
+                    queue.remove(0);
+                }
+            }
+        }
+        if(queue.isEmpty()){
+            sb.append("error\n");
+        } else {
+            sb.append(queue.toString() + "\n");
+        }
+        return sb.toString();
+    }
+    public static void main(String[] args) throws Exception{
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
+        queue = new ArrayList<Integer>();
+        StringTokenizer st = new StringTokenizer(br.readLine());
+        sb = new StringBuilder();
+        int N = Integer.parseInt(st.nextToken());
+        for(int i = 0; i < N; i++){
+            String order = br.readLine();
+            int M = Integer.parseInt(br.readLine());
+            String array = br.readLine();
+            array = array.substring(1, array.length() - 1);
+            st = new StringTokenizer(array, ",");
+            while(st.hasMoreTokens()){
+                queue.add(Integer.parseInt(st.nextToken()));
+            }
+            sb.append(check(order, M, queue));
+            //sb.append("D:" + order + " " + Integer.toString(M) + " " + queue.toString() + "\n");
+            queue.clear();
+        }
+        bw.write(sb.toString());
+        br.close();
+        bw.close();
+    }
+}
+```
