--- a/acmicpc/11401_이항계수3.md
+++ b/acmicpc/11401_이항계수3.md
@@ -1,3 +1,4 @@
+```java
 import java.util.StringTokenizer;
 import java.io.OutputStreamWriter;
 import java.io.InputStreamReader;
@@ -38,3 +39,4 @@ public class Main {
         bw.close();
     }
 }
+```
