--- a/acmicpc/2740_행렬곱셈.md
+++ b/acmicpc/2740_행렬곱셈.md
@@ -1,3 +1,4 @@
+```java
 import java.util.StringTokenizer;
 import java.io.OutputStreamWriter;
 import java.io.InputStreamReader;
@@ -48,3 +49,4 @@ public class Main {
         bw.close();
     }
 }
+```
