add acmicpc files

--- a/acmicpc/10830_행렬제곱.md
+++ b/acmicpc/10830_행렬제곱.md
@@ -1,3 +1,6 @@
+int 범위가 넘어서는지 꼭 확인해봅시다!  
+
+```java
 import java.util.StringTokenizer;
 import java.io.OutputStreamWriter;
 import java.io.InputStreamReader;
@@ -61,3 +64,4 @@ public class Main {
         bw.close();
     }
 }
+```
