--- a/acmicpc/2805_나무자르기.md
+++ b/acmicpc/2805_나무자르기.md
@@ -1,3 +1,4 @@
+```java
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.InputStreamReader;
@@ -38,3 +39,4 @@ public class Main{
         bw.close();
     }
 }
+```
