--- a/acmicpc/11279_최대힙.md
+++ b/acmicpc/11279_최대힙.md
@@ -1,3 +1,6 @@
+index가 어떻게 움직이고 index 허용 조건을 확실하게 볼 수 있도록 합시다!  
+
+```java
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.InputStreamReader;
@@ -77,3 +80,4 @@ public class Main{
         bw.close();
     }
 }
+```
