--- a/acmicpc/1927_최소힙.md
+++ b/acmicpc/1927_최소힙.md
@@ -1,3 +1,4 @@
+```java
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.InputStreamReader;
@@ -17,7 +18,7 @@ public class Main{
         arr_size += 1;
         arr[arr_size] = num;
         int index = arr_size;
-        while((index / 2) >= 1 && arr[index] > arr[index / 2]){
+        while((index / 2) >= 1 && arr[index] < arr[index / 2]){
             swap(index, index / 2);
             index /= 2;
         }
@@ -29,19 +30,19 @@ public class Main{
         arr_size -= 1;
         int index = 1;
         while(2 * index <= arr_size){
-            int max, max_index;
-            if(2 * index + 1 <= arr_size && arr[2 * index] < arr[2 * index + 1]){
-                max = arr[2 * index + 1];
-                max_index = 2 * index + 1;   
+            int min, min_index;
+            if(2 * index + 1 <= arr_size && arr[2 * index] > arr[2 * index + 1]){
+                min = arr[2 * index + 1];
+                min_index = 2 * index + 1;   
             } else {
-                max = arr[2 * index];
-                max_index = 2 * index; 
+                min = arr[2 * index];
+                min_index = 2 * index; 
             }
-            if(arr[index] > max){
+            if(arr[index] < min){
                 break;
             } else {
-                swap(index, max_index);
-                index = max_index;
+                swap(index, min_index);
+                index = min_index;
             }
         }
     }
@@ -77,3 +78,4 @@ public class Main{
         bw.close();
     }
 }
+```
