add dp solve problem in acmicpc folder

--- a/acmicpc/18427_함께블록쌓기.md
+++ b/acmicpc/18427_함께블록쌓기.md
@@ -1,3 +1,54 @@
+점화식은 i - 1번째에서 i번째로 넘어갈 때, dp배열에서 원소가 0이 아는 부분과 arr[i]인 부분을 더해서 H가 안 넘어가는 수들에 대해 dp에 숫자를 더해줍니다.  
+
+```java
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.StringTokenizer;
+
+public class Main{
+    public static void main(String[] args) throws Exception{
+        BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+        int N = Integer.parseInt(st.nextToken());
+        int M = Integer.parseInt(st.nextToken());
+        int H = Integer.parseInt(st.nextToken());
+        ArrayList<ArrayList<Integer>> arr = new ArrayList<ArrayList<Integer>>();
+        int[] dp = new int[H + 1];
+        for(int i = 0; i < N; i++){
+            st = new StringTokenizer(br.readLine(), " ");
+            ArrayList<Integer> element = new ArrayList<Integer>();
+            while(st.hasMoreTokens()){
+                int num = Integer.parseInt(st.nextToken());
+                element.add(num); 
+            }
+            arr.add(element);    
+        }
+        dp[0] = 1;
+        for(int i = 0; i < N; i++){
+            ArrayList<ArrayList<Integer>> count = new ArrayList<ArrayList<Integer>>(); 
+            for(int k = 0; k <= H; k++){
+                for(int j = 0; j < arr.get(i).size(); j++){
+                    if(dp[k] != 0 && k + arr.get(i).get(j) <= H){
+                        count.add(new ArrayList<Integer>(Arrays.asList(k + arr.get(i).get(j), dp[k])));
+                    }
+                }
+            }
+            for(int j = 0; j < count.size(); j++){
+                dp[count.get(j).get(0)] = (dp[count.get(j).get(0)] + count.get(j).get(1)) % 10007;
+            }    
+        }
+        System.out.println(dp[H]);
+        bw.close();
+        br.close();
+    }
+}
+```
+
 이런 방식으로 짜면 안됩니다.
 
 ```java
