--- a/acmicpc/1697_숨바꼭질.md
+++ b/acmicpc/1697_숨바꼭질.md
@@ -1,3 +1,6 @@
+visited 배열로 숫자가 들어오면 true로 바꿔주어서 다음번에 들어오지 않게 만드는 방법도 있습니다!  
+하지만 저는 메모리를 조금 아끼고 싶어서 arr배열로만 구현해보았습니다!  
+
 ```java
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
