add acmicpc file, programmers file and fix 1753_최단경로.md

--- a/acmicpc/1753_최단경로.md
+++ b/acmicpc/1753_최단경로.md
@@ -1,4 +1,97 @@
+# 📕 Solution
 
+```java
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.StringTokenizer;
+
+class NextNode {
+    int value;
+    int weight;
+
+    NextNode(int value, int weight) {
+        this.value = value;
+        this.weight = weight;
+    }
+} // 인접한 node init
+
+class Node {
+    int value;
+    ArrayList<NextNode> nextNode;
+
+    Node(int value, ArrayList<NextNode> nextNode) {
+        this.value = value;
+        this.nextNode = new ArrayList<NextNode>();
+    }
+} // node init
+
+class Main {
+    private static int V;
+    private static boolean[] visited;
+    private static final int MAX = 4000000;
+
+    public static boolean isVisited() {
+        for (int i = 1; i <= V; i++) {
+            if (!visited[i]) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    public static void main(String[] args) throws Exception {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+        V = Integer.parseInt(st.nextToken());
+        int E = Integer.parseInt(st.nextToken());
+        int K = Integer.parseInt(br.readLine());
+        ArrayList<Node> graph = new ArrayList<Node>();
+        for (int i = 0; i <= V; i++) {
+            graph.add(new Node(i, new ArrayList<NextNode>()));
+        }
+        for (int test_case = 1; test_case <= E; test_case++) {
+            st = new StringTokenizer(br.readLine(), " ");
+            int start = Integer.parseInt(st.nextToken());
+            int end = Integer.parseInt(st.nextToken());
+            int weight = Integer.parseInt(st.nextToken());
+            graph.get(start).nextNode.add(new NextNode(end, weight));
+        }
+        int min = 0;
+        int[] distance = new int[V + 1];
+        Arrays.fill(distance, MAX);
+        visited = new boolean[V + 1];
+        distance[K] = 0;
+        while (!isVisited()) {
+            visited[K] = true;
+            for (NextNode node : graph.get(K).nextNode) {
+                int index = node.value;
+                int size = node.weight;
+                distance[index] = Math.min(distance[index], distance[K] + size);
+            }
+            min = 0;
+            for (int i = 1; i <= V; i++) {
+                if (visited[i])
+                    continue;
+                if (distance[min] > distance[i] || min == 0)
+                    min = i;
+            }
+            K = min;
+        }
+        for (int i = 1; i <= V; i++) {
+            if (distance[i] == MAX) {
+                System.out.println("INF");
+            } else {
+                System.out.println(distance[i]);
+            }
+        }
+        br.close();
+    }
+}
+```
+
+# ❌ fail
 
 maps를 int[][]으로 미리 설정하면 시간초과가 일어납니다!
 
@@ -25,7 +118,7 @@ class Graph{
             for(int j = 0; j < N + 1; j++){
                 System.out.print(maps[i][j] + " ");
             }
-            System.out.println();    
+            System.out.println();
         }
     }
     public void dijkstra(int start){
