add 구명보트.md in programmers folder

--- a/programmers/큰 수 만들기.md
+++ b/programmers/큰 수 만들기.md
@@ -1,37 +1,57 @@
 # 📕 Solution
 
-```java
+number에서 큰 수를 고른 다음, 그 큰 수의 index의 다음 수부터
+number.length - (number.length - k - i) = k + i만큼 확인해야 합니다.
 
+```java
+import java.lang.StringBuffer;
+
+class Solution {
+    public String solution(String number, int k) {
+        StringBuffer sb = new StringBuffer();
+        char max = '0';
+        int max_index = 0;
+        for(int i = 0; i < number.length() - k; i++){
+            max = '0';
+            for(int j = max_index; j <= k + i; j++){
+                if(number.charAt(j) > max){
+                    max = number.charAt(j);
+                    max_index = j;
+                }
+            }
+            max_index++;
+            sb.append(max);
+        }
+        return sb.toString();
+    }
+}
 ```
 
 ## ❌ fail
 
+문제점 : memory 초과 ▶ number가 1000000자리이므로 상당히 오래걸립니다.
+
 ```java
 class Solution {
-    public void dfs(int count, String number, boolean[] visited, char[] result){
-        if(count == result.length){
-            for(char i : result){
-                System.out.print(i + " ");
-            }
-            System.out.print("\n");
-            return;
-        }
-        int size = visited.length;
-        for(int i = 0; i < size; i++){
-            if(!visited[i]){
-                visited[i] = true;
-                result[count] = number.charAt(i);
-                dfs(count + 1, number, visited, result);
-                visited[i] = false;
-            }
-        }
-    }
     public String solution(String number, int k) {
         String answer = "";
-        int number_size = number.length(), size = number_size - k;
-        boolean[] visited = new boolean[number_size];
-        char[] result = new char[size];
-        dfs(0, number, visited, result);
+        int size = number.length();
+        int[][] dp = new int[size - k + 1][size];
+        for(int i = 0; i < size; i++){
+            dp[1][i] = number.charAt(i) - '0';
+        }
+        int result = 0;
+        for(int i = 2; i <= size - k; i++){
+            int max = dp[i - 1][i - 2];
+            for(int j = i - 1; j < size; j++){
+                max = Math.max(dp[i - 1][j - 1], max);
+                dp[i][j] = max * 10 + dp[1][j];
+                if(i == size - k){
+                    result = Math.max(result, dp[i][j]);
+                }
+            }
+        }
+        answer += result;
         return answer;
     }
 }
