--- a/programmers/튜플.md
+++ b/programmers/튜플.md
@@ -1,7 +1,34 @@
 # 📕 Solution
 
 ```java
+import java.util.*;
 
+class Solution {
+    public int[] solution(String s) {
+        int size = s.length();
+        String str = "";
+        Map<Integer, Integer> map = new HashMap<>();
+        for(int i = 0; i < size; i++){
+            char word = s.charAt(i);
+            if(word != '{' && word != '}' && word != ','){
+                str += word;
+            } else if(str.length() != 0)  {
+                int num = Integer.parseInt(str);
+                map.putIfAbsent(num, 0);
+                map.put(num, map.get(num) + 1);
+                str = "";
+            }
+        }
+        int map_size = map.size(), count = 0;
+        int[] answer = new int[map_size];
+        List<Integer> keyList = new ArrayList<>(map.keySet());
+        keyList.sort((o1, o2) -> map.get(o2).compareTo(map.get(o1)));
+        for(Integer i : keyList){
+            answer[count++] = i;
+        }
+        return answer;
+    }
+}
 ```
 
 ## ❌ fail
@@ -27,8 +54,8 @@ class Solution {
             map.putIfAbsent(num, 0);
             map.put(num, map.get(num) + 1);
         }
-        int set_size = set.size(), count = 0;
-        int[] answer = new int[set_size];
+        int map_size = map.size(), count = 0;
+        int[] answer = new int[map_size];
         List<Integer> keyList = new ArrayList<>(map.keySet());
         keyList.sort((o1, o2) -> map.get(o2).compareTo(map.get(o1)));
         for(Integer i : keyList){
