fix 이진수 덧셈.md in acmicpc folder

--- a/acmicpc/1252_이진수 덧셈.md
+++ b/acmicpc/1252_이진수 덧셈.md
@@ -6,31 +6,59 @@ import java.io.BufferedWriter;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
-import java.util.Map;
+import java.util.ArrayList;
 import java.util.StringTokenizer;
 
 class Main {
+    public static String toString(String str) {
+        int i, start = 0, str_size = str.length();
+        for(i = 0; i < str_size; i++) {
+            if(str.charAt(i) == '1'){
+                start = i;
+                break;
+            }
+        }
+        if(i == str_size) return "0";
+        String answer = "";
+        for(i = start; i < str_size; i++){
+            answer = answer + str.charAt(i);
+        }
+        return answer;
+    }
     public static void main(String[] args) throws IOException {
         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
         BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
         StringTokenizer st = new StringTokenizer(br.readLine(), " ");
-        StringBuilder N = new StringBuilder(st.nextToken());
-        StringBuilder M = new StringBuilder(st.nextToken());
         StringBuilder sb = new StringBuilder();
-        int N_size = N.length(), M_size = M.length(), range = 0;
+        String N = toString(st.nextToken());
+        String M = toString(st.nextToken());
+        int N_size = N.length(), M_size = M.length();
+        int range = 0, cnt = 0;
+        ArrayList<Integer> arrN = new ArrayList<>();
+        ArrayList<Integer> arrM = new ArrayList<>();
+        for(int i = 0; i < N_size; i++){
+            arrN.add(N.charAt(i) - '0');
+        }
+        for(int i = 0; i < M_size; i++){
+            arrM.add(M.charAt(i) - '0');
+        }
         if(N_size < M_size){
             for(int i = 0; i < M_size - N_size; i++){
-                N.insert(0, 0);
+                arrN.add(0, 0);
             }
             range = M_size;
         } else {
             for(int i = 0; i < N_size - M_size; i++){
-                M.insert(0, 0);
+                arrM.add(0, 0);
             }
-            range = N_size
+            range = N_size;
         }
-        System.out.println(N.toString());
-        System.out.println(M.toString());
+        for(int i = range - 1; i >= 0; i--){
+            int num = arrN.get(i) + arrM.get(i) + cnt;
+            sb.insert(0, num % 2);
+            cnt = num / 2;
+        }
+        if(cnt == 1) sb.insert(0, 1);
         bw.write(sb.toString());
         br.close();
         bw.close();
@@ -41,7 +69,66 @@ class Main {
 ## ❌ fail
 
 ```java
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.util.ArrayList;
+import java.util.Map;
+import java.util.StringTokenizer;
 
+class Main {
+    public static void main(String[] args) throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
+        StringTokenizer st = new StringTokenizer(br.readLine(), " ");
+        String N = st.nextToken();
+        String M = st.nextToken();
+        int N_size = N.length(), M_size = M.length();
+        ArrayList<Integer> arrN = new ArrayList<>();
+        ArrayList<Integer> arrM = new ArrayList<>();
+        for(int i = 0; i < N_size; i++){
+            arrN.add(N.charAt(i) - '0');
+        }
+        for(int i = 0; i < M_size; i++){
+            arrM.add(M.charAt(i) - '0');
+        }
+        int range = 0, cnt = 0;
+        if(N_size < M_size){
+            for(int i = 0; i < M_size - N_size; i++){
+                arrN.add(0, 0);
+            }
+            range = M_size;
+        } else {
+            for(int i = 0; i < N_size - M_size; i++){
+                arrM.add(0, 0);
+            }
+            range = N_size;
+        }
+        StringBuilder sb = new StringBuilder();
+        for(int i = range - 1; i >= 0; i--){
+            int num = arrN.get(i) + arrM.get(i) + cnt;
+            sb.insert(0, num % 2);
+            cnt = num / 2;
+        }
+        if(cnt == 1) sb.insert(0, 1);
+        int sb_size = sb.length(), start = 0;
+        for(int i = 0; i < sb_size; i++){
+            if(sb.charAt(i) == '1'){
+                start = i;
+                break;
+            }
+        }
+        if(start == sb_size){
+            bw.write(0);
+        } else {
+            bw.write(sb.substring(start).toString());    
+        }
+        br.close();
+        bw.close();
+    }
+}
 ```
 
 # 📑 memo
