fix 모음 사전.md in programmers folder

--- a/programmers/모음 사전.md
+++ b/programmers/모음 사전.md
@@ -29,10 +29,15 @@ class Solution {
 
 ## ❌ fail
 
-```java
-
-```
-
 # 📑 memo
 
-.
+
+```java
+class Solution {
+    public int solution(String word) {
+        int answer = 0, per = 3905;
+        for(String s : word.split("")) answer += "AEIOU".indexOf(s) * (per /= 5) + 1;
+        return answer;
+    }
+}
+```
