--- a/acmicpc/1075_나누기.md
+++ b/acmicpc/1075_나누기.md
@@ -1,7 +1,20 @@
 # 📕 Solution
 
 ```java
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
 
+class Main {
+    public static void main(String[] args) throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        int N = Integer.parseInt(br.readLine());
+        int F = Integer.parseInt(br.readLine());
+        int remain = (F - ((N / 100) * 100) % F) % F;
+        System.out.println((remain < 10) ? "0" + remain : remain);
+        br.close();
+    }
+}
 ```
 
 ## ❌ fail
