--- a/programmers/최소직사각형.md
+++ b/programmers/최소직사각형.md
@@ -23,4 +23,13 @@ class Solution {
 
 # 📑 memo
 
-.
+```java
+import java.util.*;
+class Solution {
+    public int solution(int[][] sizes) {
+        return Arrays.stream(sizes).reduce((a, b) -> new int[]{
+                Math.max(Math.max(a[0], a[1]), Math.max(b[0], b[1])), Math.max(Math.min(a[0], a[1]), Math.min(b[0], b[1]))
+        }).map(it -> it[0] * it[1]).get();
+    }
+}
+```
