add 1 md files in programmers folder

--- a/acmicpc/3197_백조의 호수.md
+++ b/acmicpc/3197_백조의 호수.md
@@ -5,7 +5,6 @@ import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
-import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.Queue;
 import java.util.StringTokenizer;
@@ -40,6 +39,7 @@ class Main {
                         end[0] = i;
                         end[1] = j;
                     }
+                    nextMelting.add(new Node(i, j));
                 } else if(place[i][j].equals(".")){
                     nextMelting.add(new Node(i, j));
                 }
@@ -96,20 +96,18 @@ class Main {
             Node node = queue.poll();
             int x = node.x;
             int y = node.y;
-            if(x == end[0] && y == end[1]) return true;
-            if(visited[x][y]) continue;
-            visited[x][y] = true;
+            if(visited[end[0]][end[1]]) return true;
             for(int i = 0; i < 4; i++) {
                 int nextX = x + X[i];
-                
                 int nextY = y + Y[i];
                 if(nextX < 0 || nextX >= N) continue;
                 if(nextY < 0 || nextY >= M) continue;
+                if(visited[nextX][nextY]) continue;
+                visited[nextX][nextY] = true;
                 if(place[nextX][nextY].equals("X")) {
                     nextQueue.add(new Node(nextX, nextY));
                 } else if(place[nextX][nextY].equals(".")){
                     queue.add(new Node(nextX, nextY));
-                    //System.out.println(nextX + " " + nextY);
                 }
             }
         }
@@ -117,6 +115,7 @@ class Main {
         return false;
     }
 }
+
 ```
 
 ## ❌ fail
