--- a/programmers/n^2배열 자르기.md
+++ b/programmers/n^2배열 자르기.md
@@ -28,10 +28,17 @@ class Solution {
 }
 ```
 
-## ❌ fail
+## ⚙ fix
 
 ```java
+import java.util.Arrays;
+import java.util.stream.LongStream;
 
+class Solution {
+    public int[] solution(int n, long left, long right) {
+        return LongStream.rangeClosed(left, right).mapToInt(value -> (int) (Math.max(value / n, value % n) + 1)).toArray();
+    }
+}
 ```
 
 # 📑 memo
