--- a/acmicpc/12100_2048(Easy).md
+++ b/acmicpc/12100_2048(Easy).md
@@ -7,6 +7,90 @@
 ## ❌ fail
 
 ```java
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.StringTokenizer;
+
+class Main {
+    private static final int[] X = {-1, 1, 0, 0};
+    private static final int[] Y = {0, 0, -1, 1};
+    private static int MaxNumber, N;
+    private static int[] list;
+    private static int[][] arr;
+    public static void main(String[] args) throws IOException {
+        BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+        BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
+        N = Integer.parseInt(br.readLine());
+        list = new int[N];
+        arr = new int[N][N];
+        MaxNumber = 2;
+        for(int i = 0; i < N; i++) {
+            StringTokenizer st = new StringTokenizer(br.readLine());
+            int cnt = 0;
+            while (st.hasMoreTokens()) {
+                arr[i][cnt++] = Integer.parseInt(st.nextToken());
+            }
+        }
+        for(int i = 0; i < 4; i++) {
+            GoDirection(i, 0);
+        }
+        bw.write(Integer.toString(MaxNumber));
+        br.close();
+        bw.close();
+    }
+
+    private static void GoDirection(int direction, int cnt) {
+        if(cnt == 5) return;
+        int max = GoArrayDirection(direction);
+        if(max < MaxNumber) return;
+        for(int i = 0; i < N; i++) {
+            for(int j = 0; j < N; j++) {
+                System.out.print(arr[i][j] + " ");
+            }
+            System.out.println();
+        }
+        for(int i = 0; i < 4; i++) {
+            GoDirection(i, cnt + 1);
+        }
+    }
+
+    private static int GoArrayDirection(int direction) {
+        if(direction == 0) {
+            for(int i = 0; i < N; i++) {
+                for(int j = 0; j < N; j++) {
+
+                }
+            }
+        }
+    }
+
+    private static void GoBackDirection(int[] arr){
+        Arrays.fill(list, 0);
+        int number = -1, cnt = 0;
+        for(int i = 0; i < N; i++) {
+            if(arr[i] > 0) {
+                if(number == -1 || arr[i] != number) {
+                    number = arr[i];
+                } else {
+                    list[cnt++] =
+                }
+            }
+        }
+    }
+
+    private static void GoForwardDirection(int[] arr){
+        Arrays.fill(list, 0);
+        for(int i = 0; i < N; i++) {
+
+        }
+    }
+}
+
 
 ```
 
