feat: fix 12100_2048(Easy).md
1. 12100_2048(Easy).md 변경함.

--- a/acmicpc/12100_2048(Easy).md
+++ b/acmicpc/12100_2048(Easy).md
@@ -20,14 +20,16 @@ class Main {
     private static final int[] X = {-1, 1, 0, 0};
     private static final int[] Y = {0, 0, -1, 1};
     private static int MaxNumber, N;
-    private static int[] list;
-    private static int[][] arr;
+    private static int[] list, array;
+    private static int[][] arr, before;
     public static void main(String[] args) throws IOException {
         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
         BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
         N = Integer.parseInt(br.readLine());
         list = new int[N];
+        array = new int[N];
         arr = new int[N][N];
+        before = new int[N][N];
         MaxNumber = 2;
         for(int i = 0; i < N; i++) {
             StringTokenizer st = new StringTokenizer(br.readLine());
@@ -44,26 +46,66 @@ class Main {
         bw.close();
     }
 
-    private static void GoDirection(int direction, int cnt) {
-        if(cnt == 5) return;
-        int max = GoArrayDirection(direction);
-        if(max < MaxNumber) return;
+    private static void MemoryArr() {
         for(int i = 0; i < N; i++) {
             for(int j = 0; j < N; j++) {
-                System.out.print(arr[i][j] + " ");
+                before[i][j] = arr[i][j];
             }
-            System.out.println();
-        }
-        for(int i = 0; i < 4; i++) {
-            GoDirection(i, cnt + 1);
         }
     }
 
-    private static int GoArrayDirection(int direction) {
-        if(direction == 0) {
-            for(int i = 0; i < N; i++) {
-                for(int j = 0; j < N; j++) {
+    private static void BackUpArr() {
+        for(int i = 0; i < N; i++) {
+            for(int j = 0; j < N; j++) {
+                arr[i][j] = before[i][j] ;
+            }
+        }
+    }
 
+    private static void CheckArr() {
+        for(int i = 0; i < N; i++) {
+            for(int j = 0; j < N; j++) {
+                if(MaxNumber < arr[i][j]) MaxNumber = arr[i][j];
+            }
+        }
+    }
+
+    private static void GoDirection(int direction, int cnt) {
+        CheckArr();
+        if(cnt == 5) return;
+        MemoryArr();
+        GoArrayDirection(direction);
+        for(int i = 0; i < 4; i++) {
+            GoDirection(i, cnt + 1);
+            BackUpArr();
+        }
+    }
+
+    private static void GoArrayDirection(int direction) {
+        if(direction == 0 || direction == 1) {
+            for(int i = 0; i < N; i++) {
+                if(direction == 0) {
+                    GoBackDirection(arr[i]);
+                } else {
+                    GoForwardDirection(arr[i]);
+                }
+                for(int j = 0; j < N; j++) {
+                    arr[i][j] = list[j];
+                }
+            }
+        } else if(direction == 2 || direction == 3) {
+            Arrays.fill(array, 0);
+            for(int j = 0; j < N; j++) {
+                for(int i = 0; i < N; i++) {
+                    array[i] = arr[i][j];
+                }
+                if(direction == 2) {
+                    GoBackDirection(array);
+                } else {
+                    GoForwardDirection(array);
+                }
+                for(int i = 0; i < N; i++) {
+                    arr[i][j] = list[i];
                 }
             }
         }
@@ -74,23 +116,39 @@ class Main {
         int number = -1, cnt = 0;
         for(int i = 0; i < N; i++) {
             if(arr[i] > 0) {
-                if(number == -1 || arr[i] != number) {
+                if(number == -1) {
+                    number = arr[i];
+                } else if(arr[i] != number) {
+                    list[cnt++] = number;
                     number = arr[i];
                 } else {
-                    list[cnt++] =
+                    list[cnt++] = 2 * number;
+                    number = -1;
                 }
             }
         }
+        if(number != -1) list[cnt] = number;
     }
 
     private static void GoForwardDirection(int[] arr){
         Arrays.fill(list, 0);
-        for(int i = 0; i < N; i++) {
-
+        int number = -1, cnt = N - 1;
+        for(int i = N - 1; i >= 0; i--) {
+            if(arr[i] > 0) {
+                if(number == -1) {
+                    number = arr[i];
+                } else if(arr[i] != number) {
+                    list[cnt--] = number;
+                    number = arr[i];
+                } else {
+                    list[cnt--] = 2 * number;
+                    number = -1;
+                }
+            }
         }
+        if(number != -1) list[cnt] = number;
     }
 }
-
 
 ```
 
