feat: fix 피로도.md
1. 피로도.md 변경함.

--- a/programmers/피로도.md
+++ b/programmers/피로도.md
@@ -1,7 +1,27 @@
 # 📕 Solution
 
 ```java
-
+class Solution {
+    private int Max;
+    public int solution(int k, int[][] dungeons) {
+        int dungeons_size = dungeons.length;
+        Max = 0;
+        boolean[] visited = new boolean[dungeons_size];
+        dfs(0, visited, dungeons, dungeons_size, k);
+        return Max;
+    }
+    private void dfs(int count, boolean[] visited, int[][] dungeons, int size, int k) {
+        if(count > Max) Max = count;
+        if(count == size) return;
+        for(int i = 0; i < size; i++) {
+            if(!visited[i] && k >= dungeons[i][0]) {
+                visited[i] = true;
+                dfs(count + 1, visited, dungeons, size, k - dungeons[i][1]);
+                visited[i] = false;
+            }
+        }
+    }
+}
 ```
 
 ## ❌ fail
