feat: fix 교점에 별 만들기.md
1. 교점에 별 만들기.md 변경함.

--- a/programmers/교점에 별 만들기.md
+++ b/programmers/교점에 별 만들기.md
@@ -1,15 +1,200 @@
 # 📕 Solution
 
 ```java
+import java.util.HashSet;
 
+class Solution {
+    public class Pair {
+        int x;
+        int y;
+        Pair(int x, int y) {
+            this.x = x;
+            this.y = y;
+        }
+    }
+    public String[] solution(int[][] line) {
+        int x_min = Integer.MAX_VALUE, x_max = Integer.MIN_VALUE, y_min = Integer.MAX_VALUE, y_max = Integer.MIN_VALUE;
+        int line_size = line.length;
+        HashSet<Pair> pairList = new HashSet<Pair>();
+        for(int i = 0; i < line_size; i++) {
+            for(int j = i + 1; j < line_size; j++) {
+                long A = (long)line[i][0], B = (long)line[i][1], E = (long)line[i][2];
+                long C = (long)line[j][0], D = (long)line[j][1], F = (long)line[j][2];
+                if(A * D == B * C) continue;
+                if((B * F - E * D) % (A * D - B * C) != 0) continue;
+                if((E * C - A * F) % (A * D - B * C) != 0) continue;
+                int X = (int)(B * F - E * D) / (int)(A * D - B * C);
+                int Y = (int)(E * C - A * F) / (int)(A * D - B * C);
+                pairList.add(new Pair(X, Y));
+                x_min = Math.min(x_min, X);
+                x_max = Math.max(x_max, X);
+                y_min = Math.min(y_min, Y);
+                y_max = Math.max(y_max, Y);
+            }    
+        }
+        String xLine = "";
+        for(int i = x_min; i <= x_max; i++) {
+            xLine += ".";
+        }
+        String[] answer = new String[y_max - y_min + 1];
+        for(int i = 0; i <= y_max - y_min; i++) {
+            answer[i] = xLine;
+        }
+        for(Pair element : pairList) {
+            int nextX = element.x - x_min;
+            int nextY = y_max - element.y;
+            answer[nextY] = answer[nextY].substring(0, nextX) + "*" + answer[nextY].substring(nextX + 1);
+        }
+        return answer;
+    }
+}
 ```
 
 ## ❌ fail
 
-```java
+시간 초과
 
+```java
+import java.util.*;
+
+class Solution {
+    private int x_min, x_max, y_min, y_max, arr_size;
+    public String[] solution(int[][] line) {
+        arr_size = 1000;
+        int line_size = line.length, mid = 500;
+        String[][] list = new String[arr_size][arr_size];
+        for(int i = 0; i < arr_size; i++) {
+            for(int j = 0; j < arr_size; j++) {
+                list[i][j] = ".";
+            }
+        }
+        for(int i = 0; i < line_size; i++) {
+            for(int j = i + 1; j < line_size; j++) {
+                long A = (long)line[i][0], B = (long)line[i][1], E = (long)line[i][2];
+                long C = (long)line[j][0], D = (long)line[j][1], F = (long)line[j][2];
+                long x_enominator = B * F - E * D, x_numerator = A * D - B * C;
+                long y_enominator = E * C - A * F, y_numerator = A * D - B * C;
+                if(A * D == B * C) continue;
+                if(x_enominator % x_numerator != 0) continue;
+                if(y_enominator % y_numerator != 0) continue;
+                int X = (int)(x_enominator) / (int)(x_numerator);
+                int Y = (int)(y_enominator) / (int)(y_numerator);
+                list[mid - Y][mid + X] = "*";
+            }    
+        }
+        checkList(list);
+        String[] answer = new String[x_max - x_min + 1];
+        for(int i = x_min; i <= x_max; i++) {
+            String str = "";
+            for(int j = y_min; j <= y_max; j++) {
+                str += list[i][j];
+            }
+            answer[i - x_min] = str;
+        }
+        return answer;
+    }
+    private void checkList(String[][] list) {
+        for(int i = 0; i < arr_size; i++) {
+            boolean isValid = true;
+            for(int j = 0; j < arr_size; j++) {
+                if(!list[i][j].equals(".")) {
+                    isValid = false;
+                    x_min = i;
+                    break;
+                }
+            }
+            if(!isValid) break;
+        }
+        for(int i = arr_size - 1; i >= 0; i--) {
+            boolean isValid = true;
+            for(int j = 0; j < arr_size; j++) {
+                if(!list[i][j].equals(".")) {
+                    isValid = false;
+                    x_max = i;
+                    break;
+                }
+            }
+            if(!isValid) break;
+        }
+        for(int j = 0; j < arr_size; j++) {
+            boolean isValid = true;
+            for(int i = 0; i < arr_size; i++) {
+                if(!list[i][j].equals(".")) {
+                    isValid = false;
+                    y_min = j;
+                    break;
+                }
+            }
+            if(!isValid) break;
+        }
+        for(int j = arr_size - 1; j >= 0; j--) {
+            boolean isValid = true;
+            for(int i = 0; i < arr_size; i++) {
+                if(!list[i][j].equals(".")) {
+                    isValid = false;
+                    y_max = j;
+                    break;
+                }
+            }
+            if(!isValid) break;
+        }
+    }
+}
 ```
 
+메모리 초과
+
+```java
+import java.util.*;
+
+class Solution {
+    public String[] solution(int[][] line) {
+        int x_min = 1000, x_max = -1000, y_min = 1000, y_max = -1000;
+        int line_size = line.length;
+        List<String> pairList = new ArrayList<String>();
+        for(int i = 0; i < line_size; i++) {
+            for(int j = i + 1; j < line_size; j++) {
+                long A = (long)line[i][0], B = (long)line[i][1], E = (long)line[i][2];
+                long C = (long)line[j][0], D = (long)line[j][1], F = (long)line[j][2];
+                long x_enominator = B * F - E * D, x_numerator = A * D - B * C;
+                long y_enominator = E * C - A * F, y_numerator = A * D - B * C;
+                if(A * D == B * C) continue;
+                if(x_enominator % x_numerator != 0) continue;
+                if(y_enominator % y_numerator != 0) continue;
+                int X = (int)(x_enominator) / (int)(x_numerator);
+                int Y = (int)(y_enominator) / (int)(y_numerator);
+                pairList.add(X + " " + Y);
+                x_min = Math.min(x_min, X);
+                x_max = Math.max(x_max, X);
+                y_min = Math.min(y_min, Y);
+                y_max = Math.max(y_max, Y);
+            }    
+        }
+        String[][] list = new String[x_max - x_min + 1][y_max - y_min + 1];
+        for(int i = x_min; i <= x_max; i++) {
+            for(int j = y_min; j <= y_max; j++) {
+                list[i - x_min][j - y_min] = ".";
+            }
+        }
+        int list_size = pairList.size();
+        for(String element : pairList) {
+            StringTokenizer st = new StringTokenizer(element, " ");
+            int x = Integer.parseInt(st.nextToken());
+            int y = Integer.parseInt(st.nextToken());
+            list[x - x_min][y - y_min] = "*";
+        }
+        String[] answer = new String[y_max - y_min + 1];
+        for(int j = y_max; j >= y_min; j--) {
+            String str = "";
+            for(int i = x_min; i <= x_max; i++) {
+                str += list[i - x_min][j - y_min];
+            }
+            answer[y_max - j] = str;
+        }
+        return answer;
+    }
+}
+```
 # 📑 memo
 
 .
